more error handling and msgs for gle SERVER-3763